# irgpu-sat

./: CMakeLists.txt  README.md
bench/: bench.py  big_cnf.yaml  medium_cnf.yaml  requirements.txt  small_cnf.yaml
cpu-sat/: CMakeLists.txt
cpu-sat/src/: cnf.cc  cnf.hh  dpll.cc  dpll.hh  main.cc  solver.cc  solver.hh  utils.hh
dimacs/: basic.cnf  basic_no_unit.cnf  basic_unsat.cnf  cnf_24_vars.cnf  cnf_35_vars.cnf  cnf_36_vars.cnf  cnf_38_vars.cnf  cnf_42_vars.cnf  cnf_48_vars.cnf  pruned_regalloc_queens.cnf  pruned_regalloc_single_var.cnf  regalloc_evalexp.cnf  regalloc_fact.cnf  regalloc_for-scope.cnf  regalloc_merge.cnf  regalloc_mini_morpho.cnf  regalloc_mini_morpho_big.cnf  regalloc_mini_morpho_bigger.cnf  regalloc_queens.cnf  regalloc_queens_big.cnf  regalloc_queens_many_vars.cnf  regalloc_single_var.cnf  regalloc_use-an-array.cnf
gpu-sat/: CMakeLists.txt
gpu-sat/src/: box.cuh  cnf.cu  cnf.cuh  dpll.cu  dpll.cuh  main.cu  solver.cu  solver.cuh  utils.cuh
src/: cnf.cc  main.cc
